# auto_ria_parser

./: .env.example  .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __main__.py  config.py  db.py  parser.py
